# chip8m8

./: .gitignore  CMakeLists.txt  Chip8RealFinal.docx  app.h  audio.c  init_.c  init_window.c  main.c  opcodes.c  opcodes.h  render.c  tick.c  util.c
Project Report/Text Files/: Drøfting.docx  Report Protocol.docx  Testing og ROM.docx  chip8m8 rapport mal.docx  chip8m8 rapport mal2.docx  ~$port Protocol.docx  ~$sting og ROM.docx  ~WRL1120.tmp
ROMS/: 6X7X  BLITZ.bak  DXYN  DXYN.bak  FX0A  test
ROMS/OPTEST/: 00E0  00EE  1NNN  2NNN  3XNN  4XNN  5XY0  6XNN  7XNN  8XY0  8XY1  8XY2  8XY3  8XY4  8XY5  8XY6  8XY7  8XYE  9XY0  ANNN  BNNN  CXNN  C_Changes_14_05.txt  DXYN  EX9E  EXA1  FX07  FX0A  FX15  FX17  FX1E  FX29  FX33  FX55  FX65  test_descriptions.txt
Report/LaTeX/Testing/: bigfigExample.aux  bigfigExample.tex  testingRep.aux  testingRep.tex  testingRep.toc
Report/textFiles/: C_LOG_ARE.docx  Drøftingyo.docx  Forord.docx  Innledning.docx  Kilder.txt  Sammendrag.docx  TabellOpCodeTests.docx  Testing og ROM.docx  ~$LOG_ARE.docx  ~$bellOpCodeTests.docx  ~$nledning.docx  ~$øfting.docx
